force-app/main/default/objects/inspire1__Checklist_Item__c/inspire1__Checklist_Item__c.object-meta.xml
<CustomObject>
    <description>Inspire Planner - Used for tracking a set of actions needed to complete a Project Tasks.</description>
    <label>Checklist Item</label>
    <nameField>
        <displayFormat>CI-{000000}</displayFormat>
        <label>Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>