force-app/main/default/objects/inspire1__Checklist_Item__c/fields/inspire1__Completed__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines checklist item has been completed.</description>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>