force-app/main/default/objects/inspire1__Checklist_Item__c/fields/inspire1__Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Completion_Date__c</fullName>
    <description>Date checklist item was completed.</description>
    <label>Completion Date</label>
    <type>DateTime</type>
</CustomField>