force-app/main/default/objects/inspire1__Checklist_Item__c/fields/inspire1__Item_Name__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Item_Name__c</fullName>
    <description>Name of the Checklist Item.</description>
    <label>Item Name</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>