force-app/main/default/objects/inspire1__Checklist_Item__c/fields/inspire1__Order__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Order__c</fullName>
    <description>Defines the order number for checklist item.</description>
    <label>Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>