force-app/main/default/objects/inspire1__Checklist_Item__c/fields/inspire1__Project_Task__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Project_Task__c</fullName>
    <description>Related Project Task that Checklist Item belongs to.</description>
    <inlineHelpText>Related Project Task that Checklist Item belongs to.</inlineHelpText>
    <label>Project Task</label>
    <referenceTo>inspire1__Project_Tasks__c</referenceTo>
    <relationshipLabel>Checklist Items</relationshipLabel>
    <relationshipName>Checklist_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>