force-app/main/default/objects/inspire1__Checklist_Item__c/fields/inspire1__Required__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Required__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Defines checklist item requires completion.</description>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>