force-app/main/default/objects/inspire1__Checklist_Item__c/fields/inspire1__sysProjectId__c.field-meta.xml
<CustomField>
    <fullName>inspire1__sysProjectId__c</fullName>
    <description>Salesforce ID of related Project. Used for data query.</description>
    <formula>inspire1__Project_Task__r.inspire1__Project__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>sysProjectId</label>
    <type>Text</type>
</CustomField>